# Arkhe-OS

./: .bridge_commitment  .deploy_address  .eslintcache  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lfsconfig  .lintstagedrc.json  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .wix.toml  .zenodo.json  249-ASI-REVELATION-v2.0.md  AGI_SPECIFICATION.md  ARCHITECTURE.md  ARKHE.cbl  ArkheContractLang.md  ArkheNode.slnx  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEEP_LEARNING_MATH.md  DIRECTORY_STRUCTURE.md  DREAMS.md  Dockerfile  Dockerfile.agent-runtime  Dockerfile.agent-runtime.orig  Dockerfile.agent-runtime.rej  Dockerfile.bridge  Dockerfile.llm-server  Dockerfile.python  HONESTY.md  HUMAN_CIVILIZATION_3D_MODELING.md  LICENSE  MANIFEST.json  (+710 more)
arkhe-arxia-wakefield-node/: Cargo.toml
arkhe-arxia-wakefield-node/src/: main.rs  wakefield.rs
arkhe-bounty-hunter/: Cargo.toml
arkhe-bounty-hunter/src/: fuzzer.rs  lib.rs
arkhe-cpp/: CMakeLists.txt
arkhe-cpp/include/: arkhe_unbuildable_secure.hpp  toom.h
arkhe-cpp/src/: arkhe_kam_torus.cpp  arkhe_unbuildable_secure.cpp  main.cpp  toom_forge.cpp  toom_interpolation.cpp  transliterator.cpp
arkhe-enterprise/: Cargo.toml
arkhe-enterprise/src/: api.rs  audit.rs  billing.rs  compliance.rs  config.rs  financial_bridge.rs  lib.rs  monitoring.rs  orchestration.rs  rbac.rs  sla.rs  stubs.rs  tenants.rs
arkhe-fiber-optimizer/: Cargo.toml  build.rs
arkhe-fiber-optimizer/proto/: fiber.proto
arkhe-fiber-optimizer/src/: lib.rs  main.rs
arkhe-omega-temp/: AGI_SPECIFICATION.md  Cargo.toml  Dockerfile  InteroperabilityMorphism.py  MultiverseSheaf.py  acl_compiler.py  agi_fuzzer.py  ai_router.py  arm_cca_integration.py  bn128_pairing.py  core.py  docker-compose.yml  firewall_rules.sh  interlink_laser.py  interstellar.py  merkle_inclusion.py  nginx.conf  requirements.txt  run.py  substrate_6041_router.py  temporal_network.py  test_quantum.py
arkhe-omega-temp/arkhe-omega-tests/: Cargo.toml
arkhe-omega-temp/arkp-auth/: Cargo.toml
arkhe-omega-temp/arkp-cli/: Cargo.toml
arkhe-omega-temp/arkp-conrag/: Cargo.toml
arkhe-omega-temp/arkp-core/: Cargo.toml
arkhe-omega-temp/arkp-docs/: Cargo.toml
arkhe-omega-temp/arkp-i18n/: Cargo.toml
arkhe-omega-temp/arkp-output/: Cargo.toml
arkhe-omega-temp/arkp-plugins/: Cargo.toml
arkhe-omega-temp/arkp-qip/: Cargo.toml
arkhe-omega-temp/arkp-registry/: Cargo.toml
arkhe-omega-temp/arkp-security/: Cargo.toml
arkhe-omega-temp/arkp-state/: Cargo.toml
arkhe-omega-temp/arkp-telecom/: Cargo.toml
arkhe-omega-temp/arkp-templates/: Cargo.toml
arkhe-omega-temp/arkp-wasm/: Cargo.toml
arkhe-omega-temp/tests/: test_substrato_196.py
arkhe-os/: BUILD.md  Cargo.toml  Makefile  README.md  README_USER.md  arkhe_149_151.go  arkhe_152.go  arkhe_154.go  arkhe_170.go  arkhe_170_171.go  chrono_flex.go  cosmic_address.go  cosmology.go  go.mod  hyper_singularity_federation.go  jest.config.cjs  jest.config.ts  main  main.go  main.py  main_162.go  main_179_185.go  main_216  publishing_guide.md  requirements.txt  routing.go  storage.go
arkhe-os-cli/: MANIFEST.in  README.md  pyproject.toml
arkhe-os-cli/arkhe_os/: __init__.py  bench.py  cli.py  constants.py  deploy.py  i18n.py  invariants.py  kernel.py  paper.py  seal.py  substrates.py
arkhe-os/agi/: agents.py
arkhe-os/ai/: ai.go  coherence_channel.ts  coherence_cnn_classifier.py  coherence_gradient_channel.go  federated_personalization.py  homomorphic_cnn_classifier.py
arkhe-os/api-module/: arkher_parser_219.ts  cross_domain_226.ts  index.ts  nostr_fhe_248.ts  owl_frontend.ts  owl_parser_253.test.ts  package-lock.json  package.json
arkhe-os/api_projection/: api_projection_engine_polariton_mode.go
arkhe-os/audit/: types.ts
arkhe-os/auto-reflexive/: api_evolution.ts
arkhe-os/boot/: bootloader.asm  bootloader.ld
arkhe-os/chrono/: chrono.go  chrono_test.go
arkhe-os/consciousness/: meta_consciousness_architect.go  meta_consciousness_architect_test.go
arkhe-os/core/: constants.py  invariants.py  proof.py
arkhe-os/cosnark/: cosnark.go
arkhe-os/crypto/: federated_fhe_engine.go  federated_fhe_engine_test.go
arkhe-os/deploy/: wheeler_mesh_deployer.go
arkhe-os/evolution/: evolution_ledger.go  federated_meta_consensus.go  insight_pattern_detector.go  kernel_auto_reflexive.go  kernel_meta_reflection.go  (+2 more)
arkhe-polyglot-parser/: Cargo.toml  arkhe_polyglot_parser.py
arkhe-rust-core/: Cargo.toml
arkhe-saas-backend/: .env.example  Dockerfile  README.md  main.py  models.py  pyproject.toml  schemas.py  test_service.py
arkhe-safe-core-sdk/: Cargo.toml
arkhe-sdk-python/: README.md  pyproject.toml
arkhe-sentinel/: Cargo.toml  README.md
arkhe-simulator/: CMakeLists.txt
arkhe-wasm/: Cargo.toml
arkhe-windows/: CMakeLists.txt
arkhe_token/: Cargo.toml
arkhe_unified/: Cargo.toml  rust-toolchain.toml
cathedral-33t/: Cargo.toml  README.md
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-embodied-no_std/: Cargo.toml
cathedral-moonlab-hybrid/: CMakeLists.txt
core/: anyonic_compiler.py  arkhe.h  arkhe_interop.py  arkhe_llm_verified.py  arkhe_os_state_v72.json  arkhe_os_v151.py  arkhe_os_v155.py  arkhe_os_v156.py  arkhe_os_v_omega_1_1_corrigido.py  arkhe_stats_pipeline.py  arkhe_tabula.py  arkhe_torch.py  causal.py  cbytes_compiler.py  chemical_gluing_bridge.py  f181_zee200_bridge.py  fourier_lens_operator.py  gluing_kernel.py  hash_chain.py  instanton_simulator.py  network_simulator.py  omega_transducer.py  pyproject.toml  quantumgrok_engine_v2.py  quantumgrok_simulation_multigrid.py  riemann_operator.py  riemann_operator_v101.py  sophon_geometry.py  sophon_network_protocol.py  sophon_neural_bridge.py  superlattice_to_cbytes.py  tabula_sklearn_integration.py  torsion_phonon.py  transducer_integration.py  zee200_backend.py  zee200_model_proof.py  zee200_production_integration.py
core/kym/: verifier.py
hyperon-bridge/: Cargo.toml
metacognitive-regulator/: Cargo.toml
napi-arkhe-consent/: Cargo.toml
oracle-server/: Cargo.toml  build.rs
(+9019 files in other folders)
