[project]
name = "arkhe-rsp-parser"
version = "1.0.0"
description = "Reciprocal-Space Neural Network Parser for ARKHE OS"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "ase>=3.23.0",
    "pymatgen>=2024.0.0",
    "h5py>=3.10.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2.0; sys_platform == 'linux'",
    "torch>=2.2.0; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]
all = ["arkhe-rsp-parser[gpu,dev]"]

[project.scripts]
arkhe-rsp = "arkhe_os.parser.cli:main"

[build-system]
requires = ["setuptools>=69.0", "wheel", "scikit-build-core>=0.7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["arkhe_os*"]

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.args = ["-DARKHE_CROSS_PLATFORM=ON"]
