[package]
name = "arkhe-arxia-wakefield-node"
version = "0.1.0"
edition = "2021"

[lib]
# ...

[[bin]]
name = "firmware"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.0" }
embassy-embedded-hal = "0.1.0"
embassy-sync = "0.5.0"
embedded-io-async = "0.6.1"
static_cell = "2.0.0"
heapless = "0.8.0"
lorawan-device = "0.10.0"
sha2 = { version = "0.10.8", default-features = false }
ed25519-dalek = { version = "2.0.0", default-features = false, features = ["rand"] }

[patch.crates-io]
# Dependências do ESP32‑C3
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-println = { git = "https://github.com/esp-rs/esp-println" }
esp-storage = { git = "https://github.com/esp-rs/esp-storage" }

[features]
default = ["nightly"]
nightly = []
