[workspace]
members = [
    ".",
    "bindings/python",
    "bindings/wasm",
]
resolver = "2"

[package]
name = "arkhe-bounty-hunter"
version = "5.6.0"
edition = "2021"
description = "ARKHE Ω-TEMP — Universal Bug Bounty Hunter"
license = "MIT"
repository = "https://github.com/arkhe-os/bounty-hunter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.38", features = ["full", "sync", "time", "rt-multi-thread"], optional = true }
async-trait = "0.1.80"
rayon = "1.10"
crossbeam = "0.8.4"
dashmap = "5.5.3"
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.10.6"
aho-corasick = "1.1.3"
simdutf8 = "0.1.5"
unicode-segmentation = "1.12.0"
unicode-ident = "1.0.12"
unicode-normalization = "0.1.23"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
sha3 = "0.10.8"
blake3 = "1.7.1"
hmac = "0.12.1"
aes = "0.8.4"
reqwest = { version = "0.12.0", features = ["rustls-tls"], optional = true }
hyper = { version = "1.3.0", optional = true }
serde_qs = "0.13.0"
indicatif = "0.17.8"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
hex = "0.4.3"
base64 = "0.22.1"
bitflags = "2.6.0"
smallvec = "1.13.2"
petgraph = "0.6.4"
thiserror = "1.0.61"
anyhow = "1.0.81"
once_cell = "1.19.0"
ahash = "0.8.11"
num-format = "0.4.4"
rand = "0.8.5"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
memmap2 = "0.9.4"
tempfile = "3.10.1"
walkdir = "2.5"
