[package]
name = "arkhe-enterprise"
version = "6.0.0"
edition = "2021"
description = "ARKHE(N) ENTERPRISE PLUS SUITE - Substrato 9000"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
arkhe-compliance = { path = "../substrate-6090" }
arkhe-amazon-braket = { path = "../substrate-9010" }

nexus-sdk = { workspace = true, optional = true }
nexus-core = { workspace = true, optional = true }
nexus-network = { workspace = true, optional = true }
arkhe-nanophotonics = { path = "../substrate-9010" }
