[package]
name = "arkhe-polyglot-parser"
version = "5.0.0"
edition = "2021"
description = "ARKHE Ω-TEMP — Polymath-Polyglot Parser (Substrato 6061)"
license = "MIT"
repository = "https://github.com/arkhe-os/arkhe-polyglot-parser"

[workspace]
members = [
    "parser-core",
    "runtime",
    "bindings/wasm",
    "bindings/python"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
parser-core = { path = "parser-core" }
runtime = { path = "runtime" }
[workspace]
members = [
    "parser-core",
    "bindings/cli",
]
