[package]
name = "arkhe-polyglot-parser"
version = "5.0.0"
edition = "2021"
description = "ARKHE Ω-TEMP — Polymath-Polyglot Parser (Substrato 6061)"
license = "MIT"
repository = "https://github.com/arkhe-os/arkhe-polyglot-parser"

[workspace]
members = [
    "parser-core",
    "runtime",
    "bindings/wasm",
    "bindings/python"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4", optional = true }
serde_json = "1.0"
petgraph = "0.6"               # Graph algorithms for AST/control flow
regex = "1.10"                 # Regex for lexer patterns
phf = { version = "0.11", features = ["macros"] }  # Perfect hash functions
ahash = "0.8"                  # Fast hashing for AST nodes
smallvec = "1.12"              # Stack-allocated vectors for AST children
bitflags = "2.0"               # Token/Node flags
num-bigint = "0.4"             # Big integers for arbitrary precision
num-traits = "0.2"             # Numeric traits
unicode-segmentation = "1.11"  # Unicode text segmentation
unicode-ident = "1.0"          # Unicode identifier support
unicode-normalization = "0.1"  # Unicode normalization
memmap2 = "0.9"                # Memory-mapped files for large source files
rayon = "1.7"                  # Parallel processing
parking_lot = "0.12"           # Faster mutexes
dashmap = "5.5"                # Concurrent hash map for grammar cache
chrono = "0.4"                 # Temporal operations
hex = "0.4"                    # Hex encoding
base64 = "0.21"                # Base64 encoding
sha3 = "0.10"                  # Keccak/SHA3
lazy_static = "1.4"
thiserror = "2.0.18"

nexus-sdk = { workspace = true, optional = true }
nexus-core = { workspace = true, optional = true }
nexus-network = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"                 # Snapshot testing
pretty_assertions = "1.4"
arbitrary = "1.3"              # Arbitrary data generation for fuzzing

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]
python = []
native = []                    # Native-only features (no Wasm)
debug-ast = []                 # Debug AST visualization

[build-dependencies]
cbindgen = { version = "0.26", optional = true }  # C header generation
parser-core = { path = "parser-core" }
runtime = { path = "runtime" }
[workspace]
members = [
    "parser-core",
    "bindings/cli",
]
