[package]
name = "arkhe-safe-core-sdk"
version = "1.2.0"
edition = "2024"
authors = ["Arquiteto ORCID 0009-0005-2697-4668"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkhe-os/safe-core-sdk"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
hex = "0.4"

# Optional: no_std for embedded
[features]
default = ["std"]
std = ["tokio/rt-multi-thread", "reqwest/default-tls"]
embedded = []

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
criterion = "0.5"

[[bench]]
name = "phi_c_compute"
harness = false
[workspace]
