[tool.poetry]
name = "arkhe-sdk-python"
version = "0.1.0"
description = "Arkhe OS Client Enterprise Edition SDK"
authors = ["Arkhe Maintainers <maintainers@arkhe.global>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pydantic = "^2.3.0"
merkletools = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
