[package]
name = "arkhe-sentinel"
version = "1.0.0"
edition = "2021"
authors = ["O Ferreiro <ferreiro@bigorna.arkhe>"]
description = "Sentinela de Espectro — ANEXO CX | HAROGIC PXN-90 Driver + RF Anomaly Detection"
license = "MIT OR Apache-2.0"

[dependencies]
arkhe-rust-core = { path = "../arkhe-rust-core" }

tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"
tonic = "0.10"
prost = "0.12"

# Serial / TCP
serialport = "4.2"

# Parsing
nom = "7.1"

# Math
rustfft = "6.1"
num-complex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Erros
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
