[package]
name = "arkhe-wasm"
version = "4.3.6"
edition = "2021"
description = "ARKHE Ω-TEMP — Decentralized Temporal Consensus (WebAssembly)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }
postcard = { version = "1.0", features = ["alloc"] }
hex = "0.4"
hex-literal = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
