[package]
name = "cathedral-33t"
version = "1.0.0"
edition = "2021"
authors = ["Cathedral ARKHE Team <cathedral@arkhe.ai>"]
description = "Cathedral ARKHE 33T — 33 trillion parameter MoE model (functional reference implementation)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-33t"
readme = "README.md"

[workspace]


[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
rand = "0.8"
ndarray = "0.15"
ndarray-rand = "0.14"
rayon = "1.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
bincode = "1.3"
num-traits = "0.2"

[features]
default = []
cuda = []
